This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Reference leak in PyErr_SetObject()
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, berker.peksag, izbyshev, miss-islington, serhiy.storchaka, xiang.zhang
Priority: normal Keywords: patch

Created on 2018-08-25 20:00 by izbyshev, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 8934 merged izbyshev, 2018-08-25 20:02
PR 8943 merged miss-islington, 2018-08-26 16:31
PR 8944 merged miss-islington, 2018-08-26 16:32
Messages (4)
msg324099 - (view) Author: Alexey Izbyshev (izbyshev) * (Python triager) Date: 2018-08-25 20:00
'exc_value' reference is leaked at https://github.com/python/cpython/blob/5f79b50763d687aeeed8edcb4efcc7ac9f8fa186/Python/errors.c#L113
msg324122 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2018-08-26 16:31
New changeset a2eefa67542c25617a58c03a27c17fd48e2a0856 by Xiang Zhang (Alexey Izbyshev) in branch 'master':
bpo-34503: Fix refleak in PyErr_SetObject() (GH-8934)
https://github.com/python/cpython/commit/a2eefa67542c25617a58c03a27c17fd48e2a0856
msg324123 - (view) Author: miss-islington (miss-islington) Date: 2018-08-26 17:13
New changeset 204fb459ca1d77c2eab02a3191ba2d2216ff2d72 by Miss Islington (bot) in branch '3.6':
bpo-34503: Fix refleak in PyErr_SetObject() (GH-8934)
https://github.com/python/cpython/commit/204fb459ca1d77c2eab02a3191ba2d2216ff2d72
msg324124 - (view) Author: miss-islington (miss-islington) Date: 2018-08-26 17:13
New changeset 2caf86ff6d72d625f86db78c6e90fdaf09e8f703 by Miss Islington (bot) in branch '3.7':
bpo-34503: Fix refleak in PyErr_SetObject() (GH-8934)
https://github.com/python/cpython/commit/2caf86ff6d72d625f86db78c6e90fdaf09e8f703
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78684
2018-08-26 17:20:30xiang.zhangsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-08-26 17:13:49miss-islingtonsetmessages: + msg324124
2018-08-26 17:13:49miss-islingtonsetnosy: + miss-islington
messages: + msg324123
2018-08-26 16:32:04miss-islingtonsetpull_requests: + pull_request8417
2018-08-26 16:31:55miss-islingtonsetpull_requests: + pull_request8416
2018-08-26 16:31:28xiang.zhangsetnosy: + xiang.zhang
messages: + msg324122
2018-08-25 20:02:10izbyshevsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8406
2018-08-25 20:00:20izbyshevcreate