bpo-34503: Fix refleak in PyErr_SetObject() (GH-8934)

(cherry picked from commit a2eefa67542c25617a58c03a27c17fd48e2a0856)

Co-authored-by: Alexey Izbyshev <izbyshev@ispras.ru>